fix z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,7 @@ html {
   box-sizing: border-box;
 
 }
+
+.react-datepicker-popper {
+  z-index: 100!important;
+}
